@@ -68,6 +68,9 @@ Graph Plugin:
 
 Bug-Fixes:
 
+2879711: Fix for Excel date export concerning dates earlier than 1900-03-01.
+ Thanks to mironsadziak for the patch (Patch ID 2905218)
+
 Fixed startup error:
  java.lang.NullPointerException
  at ... .AliasFolderState.applyExpansionAndSelectionToNode(AliasFolderState.java:144)
